--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,9 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
+		<style>
+			@import url('https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&display=swap');
+		</style>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
